// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter render counter 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F54D3D",
        "borderColor": "#FFF",
        "borderRadius": 6,
        "borderWidth": 1.5,
        "height": 12,
        "minWidth": 12,
        "position": "absolute",
        "zIndex": 1,
      },
      undefined,
    ]
  }
/>
`;

exports[`Counter render counter ICounterSize.medium 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 18,
        "height": 36,
        "justifyContent": "center",
        "minWidth": 36,
        "position": "absolute",
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 24,
          "lineHeight": 30,
        },
        {
          "color": "#FFF",
          "paddingHorizontal": 9,
          "textAlign": "center",
        },
      ]
    }
  >
    1
  </Text>
</View>
`;

exports[`Counter render counter ICounterSize.small 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 13.5,
        "height": 27,
        "justifyContent": "center",
        "minWidth": 27,
        "position": "absolute",
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 18,
          "lineHeight": 24,
        },
        {
          "color": "#FFF",
          "paddingHorizontal": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    12
  </Text>
</View>
`;

exports[`Counter render counter ICounterTypes.destructive 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 18,
        "height": 36,
        "justifyContent": "center",
        "minWidth": 36,
        "position": "absolute",
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 24,
          "lineHeight": 30,
        },
        {
          "color": "#F54D3D",
          "paddingHorizontal": 9,
          "textAlign": "center",
        },
      ]
    }
  >
    2
  </Text>
</View>
`;

exports[`Counter render counter ICounterTypes.disabled 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 18,
        "height": 36,
        "justifyContent": "center",
        "minWidth": 36,
        "position": "absolute",
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 24,
          "lineHeight": 30,
        },
        {
          "color": "#9BA1B0",
          "paddingHorizontal": 9,
          "textAlign": "center",
        },
      ]
    }
  >
    10
  </Text>
</View>
`;

exports[`Counter render counter ICounterTypes.primary 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 18,
        "height": 36,
        "justifyContent": "center",
        "minWidth": 36,
        "position": "absolute",
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 24,
          "lineHeight": 30,
        },
        {
          "color": "#2B78EE",
          "paddingHorizontal": 9,
          "textAlign": "center",
        },
      ]
    }
  >
    9+
  </Text>
</View>
`;

exports[`Counter render counter ICounterTypes.secondary 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 18,
        "height": 36,
        "justifyContent": "center",
        "minWidth": 36,
        "position": "absolute",
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 24,
          "lineHeight": 30,
        },
        {
          "color": "#2B78EE",
          "paddingHorizontal": 9,
          "textAlign": "center",
        },
      ]
    }
  >
    99+
  </Text>
</View>
`;

exports[`Counter render counter ICounterTypes.tertiary 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#2B78EE",
        "borderRadius": 18,
        "height": 36,
        "justifyContent": "center",
        "minWidth": 36,
        "position": "absolute",
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 24,
          "lineHeight": 30,
        },
        {
          "color": "#FFF",
          "paddingHorizontal": 9,
          "textAlign": "center",
        },
      ]
    }
  >
    10
  </Text>
</View>
`;

exports[`Counter render counter style 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 18,
        "height": 36,
        "justifyContent": "center",
        "minWidth": 36,
        "position": "absolute",
        "zIndex": 1,
      },
      {
        "backgroundColor": "#FFF",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 24,
          "lineHeight": 30,
        },
        {
          "color": "#FFF",
          "paddingHorizontal": 9,
          "textAlign": "center",
        },
      ]
    }
  >
    20
  </Text>
</View>
`;

exports[`Counter render notification 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F54D3D",
        "borderColor": "#FFF",
        "borderRadius": 6,
        "borderWidth": 1.5,
        "height": 12,
        "minWidth": 12,
        "position": "absolute",
        "zIndex": 1,
      },
      undefined,
    ]
  }
/>
`;
